Added end to end tests with playwright

--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
+    "test": "VITE_ENV=test vite",
     "preview": "vite preview"
   },
   "dependencies": {
