--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,11 @@ services:
     volumes:
       - ./client:/usr/src/app/client
       - frontend_node_modules:/usr/src/app/client/node_modules
-
+    environment:
+      - VITE_ENV=${VITE_ENV}
   backend:
     build: ./server
-    command: npm run dev
+    command: sh -c "if [ \"$NODE_ENV\" = 'test' ]; then npm run start:test; else npm run dev; fi"
     ports:
       - 3001:3001
     volumes:
@@ -22,6 +23,7 @@ services:
     working_dir: /usr/src/app/server
     environment:
       - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/peli
+      - TEST_DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/test
       - DOCKER_ENV=true
     restart: unless-stopped    
   db:
@@ -32,6 +34,14 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     ports:
       - 5432:5432
+  testDb:
+    image: postgres
+    environment:
+      - POSTGRES_DB=test
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    ports:
+      - 5433:5432
 
 
 volumes:
